# libafl-inline-c-rs

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: assert.rs  lib.rs  run.rs
