[package]
name = "libafl_inline_c"
version = "0.1.0"
description = "A fork of inline-c-rs for LibAFL"
license = "BSD-3-Clause"
authors = ["Sharad Khanna <sharad@mineo333.dev>"]
repository = "https://github.com/mineo333/libafl-inline-c-rs"
homepage = "https://github.com/mineo333/libafl-inline-c-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["test", "c", "cpp"]
edition = "2018"

[dependencies]
tempfile = "3.1"
libafl_inline_c_macro = { path = "./macros/", version = "0.1" }
regex = "1.4"
lazy_static = "1.4"
cc = "1.0"
target-lexicon = "0.11"
assert_cmd = "1.0"
predicates = "2"

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "macros",
]
