[package]
name = "libafl_inline_c_macro"
version = "0.1.6"
description = "The macros for the `libafl_inline_c` crate"
license = "BSD-3-Clause"
authors = ["Sharad Khanna <ivan@mnt.io>"]
repository = "https://github.com/mineo333/libafl-inline-c-rs"
homepage = "https://github.com/mineo333/libafl-inline-c-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["test", "c", "cpp"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = [ "span-locations" ] }
quote = "1.0"

[build-dependencies]
rustc_version = "0.3"